# hotel_project

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml
backend/: manage.py
backend/apps/auth/: apps.py  serializers.py  urls.py  views.py
backend/apps/booking/: models.py  serializers.py  urls.py  views.py
backend/apps/category/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/city/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/profile_staff/: apps.py  models.py  serializers.py  views.py
backend/apps/region/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/review/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/room/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/room_type/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/staff_role/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/user/: filters.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/wishlist/: models.py  serializers.py  views.py
backend/configs/: __init__.py  asgi.py  celery.py  settings.py  urls.py
backend/configs/extra_configs/: __init__.py  celery_config.py  drf_yasg_conf.py  jwt_config.py  rest_config.py
backend/core/checkers/: profanity_checker.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/handlers/: error_handler.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: index.js
(+72 files in other folders)
